Fixed carousel panel font size was too large. Fix group bar chart NaN values.

--- a/style/less/dashboard.less
+++ b/style/less/dashboard.less
@@ -406,7 +406,7 @@
     padding: 10px;
     text-align: center;
     .value {
-      font-size: 26px;
+      font-size: 22px;
       color: #525f65;
     }
     .caption {
